[CTW] Bounds cache incorrect if bounds change without reflow
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox111 | --- | fixed |
People
(Reporter: Jamie, Assigned: Jamie)
References
(Blocks 1 open bug)
Details
(Whiteboard: [ctw-m5])
Attachments
(1 file)
Spun off bug 1811972 comment 3.
data:text/html,<div id="container"><p>1</p><p id="p2" hidden>2</p><p id="p3">3</p></div><button onclick="p2.hidden = false;">Show</button>
When you press the "Show" button, the bounds for p3 get updated correctly, but the bounds for the button do not.
Assignee | ||
Comment 1•4 months ago
|
||
A frame doesn't have to be reflowed to change its position.
For example, if there is a container c followed by a node outside the container o, inserting a node into c reflows c, but moves o down the page without reflowing o.
In this case, we previously weren't being notified that there was a possible bounds change, which meant we weren't updating the cache.
Now, we get notified about frames moving regardless of reflow.
Since this notification includes changes to CSS left/right/top/bottom, we can also remove the code added in bug 1774705 to explicitly watch for changes to these properties.
Pushed by jteh@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/dd54d3364761 Push a cache update if bounds change as a result of a frame moving even though it wasn't reflowed. r=morgan,emilio
Comment 3•4 months ago
|
||
bugherder |
Description
•